--- a/templates/nanny.j2
+++ b/templates/nanny.j2
@@ -14,5 +14,4 @@ fi
 {{ awslogs_setup_nanny_grep }} "{{ awslogs_setup_launcher }}" > /dev/null
 RETVAL=$?
 echo
-[ $RETVAL != 0 ] && [ -f $LOCKFILE ] && {{ awslogs_setup_nanny_service }} awslogs restart
-
+[ $RETVAL != 0 ] && [ -f $LOCKFILE ] && {{ awslogs_setup_nanny_service_init_script }} restart
