--- a/templates/logrotate_config.j2
+++ b/templates/logrotate_config.j2
@@ -14,6 +14,6 @@
     compress
     rotate 4
     postrotate
-        {{ awslogs_setup_nanny_service }} awslogs restart
+        {{ awslogs_setup_nanny_service_init_script }} restart
     endscript
 }
